<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_idTrain"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
              <TextView
                  android:id="@+id/designText"
                  android:text="@string/entrer"
                  android:textStyle="italic"
                  android:layout_centerHorizontal="true"
                  android:textSize="18sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/designEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/designText"
                android:layout_marginTop="27dp"
                android:hint="@string/hint_design" />

            <EditText
                android:id="@+id/itineraireEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/designEdit"
                android:layout_marginTop="27dp"
                android:hint="@string/hint_itineraire" />
            <Button
                android:id="@+id/saveTrainbtn"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/itineraireEdit"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>